Avoid inline code background overlaps

--- a/github.css
+++ b/github.css
@@ -449,8 +449,8 @@ body img {
 
 body code {
   padding: 0;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
+  padding-top: 0;
+  padding-bottom: 0;
   margin: 0;
   font-size: 85%;
   background-color: rgba(0,0,0,0.04);
